--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^7.0.0",
-    "@angular/compiler-cli": "^7.1.4",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.14",
     "@angular/language-service": "^7.1.4",
     "@ngrx/schematics": "^7.0.0",
     "@types/express": "^4.0.39",
@@ -53,16 +54,15 @@
     "codelyzer": "~4.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^6.0.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~3.1.6",
-    "@angular-devkit/build-angular": "~0.10.0"
+    "typescript": "~3.1.6"
   }
 }
